updated octoprint to show time left

--- a/widgets/octoprint/octoprint.html
+++ b/widgets/octoprint/octoprint.html
@@ -12,4 +12,8 @@
     <td>File Name: </td>
     <td data-bind="job"></td>
   </tr>
+  <tr class="current_job">
+    <td>Time Left: </td>
+    <td data-bind="time_left"></td>
+  </tr>
 </table>
