--- a/widgets/octoprint/octoprint.html
+++ b/widgets/octoprint/octoprint.html
@@ -1,20 +1,20 @@
 <h3 class="title" data-bind="title"></h1>
 <table>
   <tr>
-    <td>Status: </td>
-    <td data-bind="state"></td>
+    <td class="label">Status: </td>
+    <td class="value" data-bind="state"></td>
   </tr>
   <tr class="current_job">
-    <td>Progress: </td>
-    <td data-bind="progress"></td>
+    <td class="label">Progress: </td>
+    <td class="value" data-bind="progress"></td>
   </tr>
   <tr class="current_job">
-    <td>File Name: </td>
-    <td data-bind="job"></td>
+    <td class="label">File Name: </td>
+    <td class="value" data-bind="job"></td>
   </tr>
   <tr class="current_job">
-    <td>Time Left: </td>
-    <td data-bind="time_left"></td>
+    <td class="label">Time Left: </td>
+    <td class="value" data-bind="time_left"></td>
   </tr>
 </table>
 <p class="updated-at" data-bind="updatedAtMessage"></p>
